# cpp-arm64-baremetal-playground

./: CMakeLists.txt  README.md  local-build.cmd
cmake/: aarch64-none-elf.cmake  arm-none-eabi.cmake
src/: main.cpp
